# gaia-mcp-servers

./: Cargo.toml  README.md  check_code_before_commit.sh
.github/workflows/: build.yml  release.yml
cardea-agentic-search/: README.md
cardea-agentic-search/cardea-agentic-search-mcp-client/: Cargo.toml
cardea-agentic-search/cardea-agentic-search-mcp-common/: Cargo.toml
cardea-agentic-search/cardea-agentic-search-mcp-server/: Cargo.toml
cardea-calculator/: README.md
cardea-calculator/cardea-calculator-mcp-client/: Cargo.toml
cardea-calculator/cardea-calculator-mcp-server/: Cargo.toml
cardea-elastic/: README.md
cardea-elastic/cardea-elastic-mcp-client/: Cargo.toml
cardea-elastic/cardea-elastic-mcp-common/: Cargo.toml
cardea-elastic/cardea-elastic-mcp-server/: Cargo.toml
cardea-github/: README.md
cardea-github/cardea-github-mcp-client/: Cargo.toml
cardea-github/cardea-github-mcp-common/: Cargo.toml
cardea-github/cardea-github-mcp-common/src/: lib.rs
cardea-github/cardea-github-mcp-server/: Cargo.toml
cardea-kwsearch/: README.md
cardea-kwsearch/cardea-kwsearch-mcp-client/: Cargo.toml
cardea-kwsearch/cardea-kwsearch-mcp-client/src/: main.rs
cardea-kwsearch/cardea-kwsearch-mcp-common/: Cargo.toml
cardea-kwsearch/cardea-kwsearch-mcp-server/: Cargo.toml
cardea-qdrant/: README.md
cardea-qdrant/cardea-qdrant-mcp-client/: Cargo.toml
cardea-qdrant/cardea-qdrant-mcp-common/: Cargo.toml
cardea-qdrant/cardea-qdrant-mcp-common/src/: lib.rs
cardea-qdrant/cardea-qdrant-mcp-server/: Cargo.toml
cardea-tidb/: README.md
cardea-tidb/cardea-tidb-mcp-client/: Cargo.toml
cardea-tidb/cardea-tidb-mcp-common/: Cargo.toml
cardea-tidb/cardea-tidb-mcp-common/src/: lib.rs
cardea-tidb/cardea-tidb-mcp-server/: Cargo.toml
cardea-weather/: README.md
cardea-weather/cardea-weather-mcp-client/: Cargo.toml
cardea-weather/cardea-weather-mcp-server/: Cargo.toml
cardea-web-search/: README.md
cardea-web-search/cardea-web-search-mcp-client/: Cargo.toml
cardea-web-search/cardea-web-search-mcp-server/: Cargo.toml
gaia-agentic-search/: README.md
gaia-agentic-search/gaia-agentic-search-mcp-client/: Cargo.toml
gaia-agentic-search/gaia-agentic-search-mcp-client/src/: main.rs
gaia-agentic-search/gaia-agentic-search-mcp-common/: Cargo.toml
gaia-agentic-search/gaia-agentic-search-mcp-server/: Cargo.toml
gaia-agentic-search/gaia-agentic-search-mcp-server/src/: main.rs  search.rs
gaia-calculator/: README.md
gaia-calculator-mcp-client/: Cargo.toml
gaia-calculator-mcp-server/: Cargo.toml
gaia-calculator-mcp-server-stdio/: Cargo.toml
gaia-calculator-mcp-server/src/: calculator.rs  main.rs
gaia-calculator/gaia-calculator-mcp-client/: Cargo.toml
gaia-calculator/gaia-calculator-mcp-client/src/: main.rs
gaia-calculator/gaia-calculator-mcp-server/: Cargo.toml
gaia-calculator/gaia-calculator-mcp-server-sse/: Cargo.toml
gaia-calculator/gaia-calculator-mcp-server-sse/src/: main.rs
gaia-calculator/gaia-calculator-mcp-server-stdio/: Cargo.toml
gaia-calculator/gaia-calculator-mcp-server-streamhttp/: Cargo.toml
gaia-calculator/gaia-calculator-mcp-server/src/: calculator.rs  main.rs
gaia-elastic/: README.md
gaia-elastic/gaia-elastic-mcp-client/: Cargo.toml
gaia-elastic/gaia-elastic-mcp-common/: Cargo.toml
gaia-elastic/gaia-elastic-mcp-server/: Cargo.toml
gaia-elastic/gaia-elastic-mcp-server-sse/: Cargo.toml
gaia-elastic/gaia-elastic-mcp-server-sse/src/: elastic.rs  lib.rs  main.rs
gaia-elastic/gaia-elastic-mcp-server-streamhttp/: Cargo.toml
gaia-elastic/gaia-elastic-mcp-server/src/: elastic.rs  main.rs
gaia-github/: README.md
gaia-github/gaia-github-mcp-client/: Cargo.toml
gaia-github/gaia-github-mcp-common/: Cargo.toml
gaia-github/gaia-github-mcp-server/: Cargo.toml
gaia-github/gaia-github-mcp-server/src/: github.rs  main.rs
gaia-kwsearch/: README.md
gaia-kwsearch-common/src/: lib.rs
gaia-kwsearch-mcp-client/: Cargo.toml
gaia-kwsearch-mcp-client/src/: main.rs
gaia-kwsearch-mcp-server/: Cargo.toml
gaia-kwsearch-mcp-server/src/: main.rs  search.rs
gaia-kwsearch/gaia-kwsearch-common/: Cargo.toml
gaia-kwsearch/gaia-kwsearch-common/src/: lib.rs
gaia-kwsearch/gaia-kwsearch-mcp-client/: Cargo.toml
gaia-kwsearch/gaia-kwsearch-mcp-common/: Cargo.toml
gaia-kwsearch/gaia-kwsearch-mcp-server/: Cargo.toml
gaia-kwsearch/gaia-kwsearch-mcp-server-sse/: Cargo.toml
gaia-kwsearch/gaia-kwsearch-mcp-server-sse/src/: main.rs  search.rs
gaia-kwsearch/gaia-kwsearch-mcp-server-stdio/: Cargo.toml
gaia-kwsearch/gaia-kwsearch-mcp-server-stdio/src/: main.rs
gaia-kwsearch/gaia-kwsearch-mcp-server-streamhttp/: Cargo.toml
gaia-kwsearch/gaia-kwsearch-mcp-server-streamhttp/src/: main.rs  search.rs
gaia-mcp-client/: Cargo.toml
gaia-mcp-client/src/: main.rs  qdrant.rs
gaia-qdrant/: README.md
gaia-qdrant-common/src/: lib.rs
gaia-qdrant-mcp-client/src/: main.rs
gaia-qdrant-mcp-server/: Cargo.toml
gaia-qdrant-mcp-server-stdio/: Cargo.toml
gaia-qdrant/gaia-qdrant-common/: Cargo.toml
gaia-qdrant/gaia-qdrant-mcp-client/: Cargo.toml
gaia-qdrant/gaia-qdrant-mcp-client/src/: main.rs
gaia-qdrant/gaia-qdrant-mcp-common/: Cargo.toml
gaia-qdrant/gaia-qdrant-mcp-common/src/: lib.rs
gaia-qdrant/gaia-qdrant-mcp-server-streamhttp/: Cargo.toml
gaia-qdrant/gaia-qdrant-mcp-server-streamhttp/src/: main.rs
gaia-search/gaia-search-mcp-client/: Cargo.toml
gaia-search/gaia-search-mcp-client/src/: main.rs
gaia-tidb/: README.md
gaia-tidb/gaia-tidb-mcp-client/: Cargo.toml
gaia-tidb/gaia-tidb-mcp-client/src/: main.rs
gaia-weather/: README.md
gaia-weather-mcp-server/: Cargo.toml
gaia-weather-mcp-server/src/: main.rs  weather.rs
gaia-weather/gaia-weather-mcp-client/: Cargo.toml
gaia-weather/gaia-weather-mcp-client/src/: main.rs
gaia-weather/gaia-weather-mcp-server-stdio/: Cargo.toml
gaia-weather/gaia-weather-mcp-server-stdio/src/: main.rs
gaia-web-search/: README.md
gaia-web-search/gaia-web-search-mcp-server/: Cargo.toml
gaia-web-search/gaia-web-search-mcp-server/src/: main.rs  search.rs
(+76 files in other folders)
