[workspace]
members = [
    "cardea-agentic-search/cardea-agentic-search-mcp-client",
    "cardea-agentic-search/cardea-agentic-search-mcp-common",
    "cardea-agentic-search/cardea-agentic-search-mcp-server",
    "cardea-calculator/cardea-calculator-mcp-client",
    "cardea-calculator/cardea-calculator-mcp-server",
    "cardea-elastic/cardea-elastic-mcp-client",
    "cardea-elastic/cardea-elastic-mcp-common",
    "cardea-elastic/cardea-elastic-mcp-server",
    "cardea-github/cardea-github-mcp-client",
    "cardea-github/cardea-github-mcp-common",
    "cardea-github/cardea-github-mcp-server",
    "cardea-kwsearch/cardea-kwsearch-mcp-client",
    "cardea-kwsearch/cardea-kwsearch-mcp-common",
    "cardea-kwsearch/cardea-kwsearch-mcp-server",
    "cardea-qdrant/cardea-qdrant-mcp-client",
    "cardea-qdrant/cardea-qdrant-mcp-common",
    "cardea-qdrant/cardea-qdrant-mcp-server",
    "cardea-web-search/cardea-web-search-mcp-client",
    "cardea-web-search/cardea-web-search-mcp-server",
    "cardea-tidb/cardea-tidb-mcp-client",
    "cardea-tidb/cardea-tidb-mcp-common",
    "cardea-tidb/cardea-tidb-mcp-server",
    "cardea-weather/cardea-weather-mcp-client",
    "cardea-weather/cardea-weather-mcp-server",
]
resolver = "3"

[workspace.dependencies]
rmcp                             = "0.2.1"
tokio                            = "1"
serde                            = "1.0"
serde_json                       = "1.0"
anyhow                           = "1.0"
tracing                          = "0.1"
tracing-subscriber               = "0.3"
futures                          = "0.3"
rand                             = "0.9"
hyper                            = "1"
hyper-util                       = "0.1"
tokio-tungstenite                = "0.27.0"
reqwest                          = { version = "0.12", default-features = false }
pin-project-lite                 = "0.2"
cardea-qdrant-mcp-common         = { path = "cardea-qdrant/cardea-qdrant-mcp-common" }
cardea-kwsearch-mcp-common       = { path = "cardea-kwsearch/cardea-kwsearch-mcp-common" }
cardea-elastic-mcp-common        = { path = "cardea-elastic/cardea-elastic-mcp-common" }
cardea-tidb-mcp-common           = { path = "cardea-tidb/cardea-tidb-mcp-common" }
cardea-github-mcp-common         = { path = "cardea-github/cardea-github-mcp-common" }
cardea-agentic-search-mcp-common = { path = "cardea-agentic-search/cardea-agentic-search-mcp-common" }
clap                             = "4.5"
endpoints                        = "0.33.0"
once_cell                        = "1.18"
axum                             = "0.8"
rustls                           = { version = "0.23.27", default-features = false }
regex                            = "1"

[workspace.package]
edition    = "2024"
version    = "0.8.0"
repository = "https://github.com/cardea-mcp/cardea-mcp-servers"
license    = "Apache-2.0"
