[package]
name    = "gaia-calculator-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp               = { workspace = true, features = ["server", "macros"] }
tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
futures            = { workspace = true }
rand               = { workspace = true }
schemars           = { workspace = true }
hyper              = { workspace = true, features = ["client", "server", "http1"] }
hyper-util         = { workspace = true, features = ["tokio"] }
tokio-tungstenite  = { workspace = true }
reqwest            = { workspace = true }
pin-project-lite   = { workspace = true }


[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
hyper   = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
tokio   = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
