[package]
name    = "gaia-qdrant-mcp-server-stdio"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp               = { workspace = true, features = ["server", "macros", "transport-io"] }
tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
futures            = { workspace = true }
rand               = { workspace = true }
schemars           = { workspace = true }
hyper              = { workspace = true, features = ["client", "server", "http1"] }
hyper-util         = { workspace = true, features = ["tokio"] }
tokio-tungstenite  = { workspace = true }
reqwest            = { workspace = true, features = ["rustls-tls", "json"] }
pin-project-lite   = { workspace = true }
gaia-qdrant-common = { workspace = true }
