[package]
name    = "gaia-weather-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main", features = [
    "server",
    "macros",
] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
futures = "0.3"
rand = { version = "0.8" }
schemars = { version = "0.8", optional = true }
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-tungstenite = "0.26.2"
reqwest = { version = "0.12", features = ["json"] }
pin-project-lite = "0.2"
