[package]
name                 = "cardea-github-mcp-common"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
license.workspace    = true

[dependencies]
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmcp       = { workspace = true, features = ["macros"] }
