[package]
name                 = "cardea-tidb-mcp-common"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
license.workspace    = true

[dependencies]
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
rmcp         = { workspace = true, features = ["macros"] }
endpoints    = { workspace = true, features = ["index"] }
mysql_common = "0.34.1"
