[package]
name                 = "gaia-agentic-search-mcp-client"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
license.workspace    = true

[dependencies]
rmcp = { workspace = true, features = [
    "client",
    "macros",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time", "signal"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
clap = { workspace = true, features = ["cargo", "derive"] }
gaia-agentic-search-mcp-common = { workspace = true }
