[package]
name    = "gaia-calculator-mcp-client"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp               = { workspace = true, features = ["client", "macros", "transport-io", "transport-child-process", "transport-sse"] }
tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true, features = ["cargo", "derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
