[package]
name       = "gaia-calculator-mcp-server-sse"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[dependencies]
rmcp               = { workspace = true, features = ["server", "macros", "transport-sse-server"] }
tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time", "signal"] }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
futures            = { workspace = true }
schemars           = { workspace = true }
