[package]
name       = "gaia-calculator-mcp-server"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[dependencies]
rmcp               = { workspace = true, features = ["server", "macros"] }
tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
futures            = { workspace = true }
rand               = { workspace = true }
schemars           = { workspace = true }
hyper              = { workspace = true, features = ["client", "server", "http1"] }
hyper-util         = { workspace = true, features = ["tokio"] }
tokio-tungstenite  = { workspace = true }
reqwest            = { workspace = true }
pin-project-lite   = { workspace = true }
