[package]
name       = "gaia-qdrant-mcp-client"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[dependencies]
rmcp = { workspace = true, features = [
    "client",
    "macros",
    "transport-io",
    "transport-child-process",
    "transport-sse-client",
    "reqwest",
] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time", "signal"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
clap = { version = "^4.5", features = ["cargo", "derive"] }
gaia-qdrant-common = { workspace = true }
