[package]
name        = "gaia-qdrant-mcp-common"
version     = "0.1.0"
edition     = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
categories  = ["data-structures"]
description = "Data types and utilities for the Gaia Qdrant MCP"

[dependencies]
rmcp       = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
