[package]
name                 = "gaia-qdrant-mcp-server-streamhttp"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
license.workspace    = true

[dependencies]
rmcp                   = { workspace = true, features = ["server", "macros", "transport-streamable-http-server", "transport-worker"] }
tokio                  = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time", "signal"] }
serde                  = { workspace = true, features = ["derive"] }
serde_json             = { workspace = true }
anyhow                 = { workspace = true }
tracing                = { workspace = true }
tracing-subscriber     = { workspace = true, features = ["env-filter", "std", "fmt"] }
futures                = { workspace = true }
rand                   = { workspace = true }
schemars               = { workspace = true }
hyper                  = { workspace = true, features = ["client", "server", "http1"] }
hyper-util             = { workspace = true, features = ["tokio"] }
tokio-tungstenite      = { workspace = true }
reqwest                = { workspace = true, features = ["rustls-tls", "json"] }
pin-project-lite       = { workspace = true }
gaia-qdrant-mcp-common = { workspace = true }
axum                   = { version = "0.8", features = ["macros"] }
clap                   = { workspace = true, features = ["derive"] }
once_cell              = { workspace = true }
