[package]
name                 = "gaia-tidb-mcp-client"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
license.workspace    = true

[dependencies]
rmcp = { workspace = true, features = [
    "client",
    "macros",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
clap = { version = "^4.5", features = ["cargo", "derive"] }
gaia-tidb-mcp-common = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
