[package]
name    = "gaia-weather-mcp-server-stdio"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp               = { workspace = true, features = ["server", "macros", "transport-io"] }
tokio              = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time"] }
anyhow             = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
reqwest            = { workspace = true, features = ["rustls-tls", "json"] }
